2.x release (#17)
* fix: Correct README.md filename
* fix: Make mvn javadoc:javadoc work
* fix: Add .asciidoctor directory to .gitignore
* fix: Bump up asciidoc/javadoc related maven plugin versions
* fix: Bump up asciidoc/javadoc related maven plugin versions
* fix: Correct version number to 2.0.0-SNAPSHOT
* fix: Import configuration of maven-site-plugin from symfonion project
* fix: Install asciidoctor-diagram on prepare-package
* fix: Install asciidoctor-diagram on prepare-package
* fix: Bump up maven-gpg-plugin version to 3.2.6
* fix: Explicitly define maven-deploy-plugin, maven-source-plugin, and maven-gpg-plugin
* fix: Specify profile name explicitly in maven-release-plugin's setting